creating the index.js and linking the 2 html page

--- a/week02/homepageserver/home.html
+++ b/week02/homepageserver/home.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8" />
 
     <title>Home</title>
-    <link rel="stylesheet" href="./public/styles/style.css" />
+    <link rel="stylesheet" href="/styles/style.css" />
   </head>
   <body>
     <h1>Home</h1>
     <p>Home, sweet home</p>
-    <img src="./public/images/hammer.png" alt="this is art" />
+    <img src="images/hammer.jpeg" alt="this is art" />
     <p>
       <a href="/someotherpage">To some other page</a>
     </p>
