manipulating the form with express

--- a/week02/formProject/loginform.html
+++ b/week02/formProject/loginform.html
@@ -3,20 +3,20 @@
   <head>
     <meta charset="UTF-8" />
 
-    <title>Person data</title>
+    <title>Login form</title>
   </head>
   <body>
-    <form action="/" method="POST">
+    <form action="/login" method="POST">
       <p>
         <label>
-          First name:
-          <input type="text" name="firstname" size="20" />
+          Username:
+          <input type="text" name="username" size="20" />
         </label>
       </p>
       <p>
         <label>
-          Last name:
-          <input type="text" name="lastname" size="30" />
+          password:
+          <input type="password" name="password" size="30" />
         </label>
       </p>
       <button type="submit">Submit</button>
