--- a/week02/homepageserver/home.html
+++ b/week02/homepageserver/home.html
@@ -9,7 +9,7 @@
   <body>
     <h1>Home</h1>
     <p>Home, sweet home</p>
-    <img src="images/hammer.jpeg" alt="this is art" />
+    <img src="/images/hammer.jpeg" alt="this is art" />
     <p>
       <a href="/someotherpage">To some other page</a>
     </p>
